@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_trv.c,v 1.138 2013-04-05 21:19:29 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_trv.c,v 1.139 2013-04-06 22:15:34 pvicente Exp $ */
 
 /* Purpose: netCDF4 traversal storage */
 
@@ -585,6 +585,56 @@ trv_tbl_prc                            /* [fnc] Process objects  */
   (void)nco_var_lst_dvd_trv(var_prc_1,var_prc_out,CNV_CCM_CCSM_CF,FIX_REC_CRD,cnk_map,cnk_plc,dmn_xcl,nbr_dmn_xcl,&prc_typ_1); 
   (void)nco_var_lst_dvd_trv(var_prc_2,var_prc_out,CNV_CCM_CCSM_CF,FIX_REC_CRD,cnk_map,cnk_plc,dmn_xcl,nbr_dmn_xcl,&prc_typ_2); 
 
+
+
+  /* Conform type and rank for process variables */
+  if(prc_typ_1 == prc_typ && prc_typ_2 == prc_typ){
+
+    int dmn_idx_gtr;
+    int dmn_idx_lsr;
+
+    /* Check that all dims in var_prc_lsr are in var_prc_gtr */
+    for(dmn_idx_lsr=0;dmn_idx_lsr<var_prc_lsr->nbr_dim;dmn_idx_lsr++){
+      for(dmn_idx_gtr=0;dmn_idx_gtr<var_prc_gtr->nbr_dim;dmn_idx_gtr++)  
+        if(!strcmp(var_prc_lsr->dim[dmn_idx_lsr]->nm,var_prc_gtr->dim[dmn_idx_gtr]->nm)){
+          break;
+        }
+        if(dmn_idx_gtr == var_prc_gtr->nbr_dim){
+          (void)fprintf(stdout,"%s: ERROR Variables do not conform: variable %s has dimension %s not present in variable %s\n",prg_nm_get(),var_prc_lsr->nm,var_prc_lsr->dim[dmn_idx_lsr]->nm,var_prc_gtr->nm);
+          nco_exit(EXIT_FAILURE);
+        } /* endif error */
+    } /* end loop over idx */
+
+    /* Read */
+    (void)nco_msa_var_get_trv(grp_id_1,var_prc_1,trv_1);
+    (void)nco_msa_var_get_trv(grp_id_2,var_prc_2,trv_2);
+
+    /* Make sure variables conform in type */
+    if(var_prc_1->type != var_prc_2->type){
+      if(dbg_lvl_get() >= nco_dbg_std) (void)fprintf(stderr,"%s: INFO Input variables do not conform in type: file 1 variable %s has type %s, file 2 variable %s has type %s, output variable %s will have type %s\n",prg_nm_get(),var_prc_1->nm,nco_typ_sng(var_prc_1->type),var_prc_2->nm,nco_typ_sng(var_prc_2->type),var_prc_gtr->nm,nco_typ_sng(var_prc_gtr->type));
+    }  
+
+    /* Broadcast lesser to greater variable. NB: Pointers may change so _gtr, _lsr not valid */
+    if(var_prc_1->nbr_dim != var_prc_2->nbr_dim) (void)ncap_var_cnf_dmn(&var_prc_1,&var_prc_2);
+
+    int max_typ;
+    if (trv_2->var_typ > trv_1->var_typ) max_typ=trv_2->var_typ; else max_typ=trv_1->var_typ;
+    trv_1->var_typ=max_typ;
+    trv_2->var_typ=max_typ;
+
+    if(RNK_1_GTR){
+      var_prc_2=nco_var_cnf_typ(var_prc_1->type,var_prc_2);
+    }else{
+      var_prc_1=nco_var_cnf_typ(var_prc_2->type,var_prc_1);
+    }
+
+    /* var1 and var2 now conform in size and type to eachother and are in memory */
+
+    assert(var_prc_1->type == var_prc_2->type);
+    assert(trv_1->var_typ == trv_2->var_typ);
+
+  } /* Conform type and rank for process variables */
+
   /* Define mode */
   if(flg_def){  
 
@@ -668,8 +718,6 @@ trv_tbl_prc                            /* [fnc] Process objects  */
 
   }else{ /* Write mode */
 
-    int dmn_idx_gtr;
-    int dmn_idx_lsr;
     int has_mss_val;      /* [flg] Variable has missing value */
 
     ptr_unn mss_val;      /* [sct] Missing value */
@@ -696,44 +744,8 @@ trv_tbl_prc                            /* [fnc] Process objects  */
       var_prc_out->srt=var_prc_gtr->srt;
       var_prc_out->cnt=var_prc_gtr->cnt;
 
-      /* Find and set variable dmn_nbr, ID, mss_val, type in first file */
-      (void)nco_var_mtd_refresh(grp_id_1,var_prc_1);
-
       /* Set missing value */
       has_mss_val=var_prc_gtr->has_mss_val;
-
-      /* Read hyperslab from first file */
-      (void)nco_msa_var_get_trv(grp_id_1,var_prc_1,trv_1);
-
-      /* Find and set variable dmn_nbr, ID, mss_val, type in second file */
-      (void)nco_var_mtd_refresh(grp_id_2,var_prc_2);
-
-      /* Read hyperslab from second file */
-      (void)nco_msa_var_get_trv(grp_id_2,var_prc_2,trv_2);
-
-      /* Check that all dims in var_prc_lsr are in var_prc_gtr */
-      for(dmn_idx_lsr=0;dmn_idx_lsr<var_prc_lsr->nbr_dim;dmn_idx_lsr++){
-        for(dmn_idx_gtr=0;dmn_idx_gtr<var_prc_gtr->nbr_dim;dmn_idx_gtr++)  
-          if(!strcmp(var_prc_lsr->dim[dmn_idx_lsr]->nm,var_prc_gtr->dim[dmn_idx_gtr]->nm)){
-            break;
-          }
-          if(dmn_idx_gtr == var_prc_gtr->nbr_dim){
-            (void)fprintf(stdout,"%s: ERROR Variables do not conform: variable %s has dimension %s not present in variable %s\n",prg_nm_get(),var_prc_lsr->nm,var_prc_lsr->dim[dmn_idx_lsr]->nm,var_prc_gtr->nm);
-            nco_exit(EXIT_FAILURE);
-          } /* endif error */
-      } /* end loop over idx */
-
-      /* Make sure variables conform in type */
-      if(var_prc_1->type != var_prc_2->type){
-        if(dbg_lvl_get() >= nco_dbg_std) (void)fprintf(stderr,"%s: INFO Input variables do not conform in type: file 1 variable %s has type %s, file 2 variable %s has type %s, output variable %s will have type %s\n",prg_nm_get(),var_prc_1->nm,nco_typ_sng(var_prc_1->type),var_prc_2->nm,nco_typ_sng(var_prc_2->type),var_prc_gtr->nm,nco_typ_sng(var_prc_gtr->type));
-      }  
-
-      /* Broadcast lesser to greater variable. NB: Pointers may change so _gtr, _lsr not valid */
-      if(var_prc_1->nbr_dim != var_prc_2->nbr_dim) (void)ncap_var_cnf_dmn(&var_prc_1,&var_prc_2);
-
-      if(RNK_1_GTR) var_prc_2=nco_var_cnf_typ(var_prc_1->type,var_prc_2); else var_prc_1=nco_var_cnf_typ(var_prc_2->type,var_prc_1);
-
-      /* var1 and var2 now conform in size and type to eachother and are in memory */
 
       /* Change missing_value, if any, of lesser rank to missing_value, if any, of greater rank */
       if(RNK_1_GTR) has_mss_val=nco_mss_val_cnf(var_prc_1,var_prc_2); else has_mss_val=nco_mss_val_cnf(var_prc_2,var_prc_1);
